--- a/appendix/A.tex
+++ b/appendix/A.tex
@@ -71,6 +71,21 @@ The final deflected shape is necessary for determining the camber requirements o
 
 This section provides a step-by-step procedure for designing a bridge incorporating the self-stressing method. All grout, and/or adhesives must be adequately cured prior to lowering the interior support. The creep and shrinkage properties of the materials must be compatible with the intended use and properties assumed during analysis.
 
+\paragrah*{Step1. Determine Required Amount of Prestress}
+The self-stressing method is a way to introduce compressive stresses in the concrete deck of a multi-span
+continuous beam. The compressive stresses are generally located near the interior supports and therefore work to
+counter the tensile stresses that arise in this vicinity due to gravity and live loading. The result is a reduction in
+cracking and an accompanying increase in service life. The magnitude of the prestress that must be applied in order
+to achieve the desired effects has been determined based on past experience with decks that have been prestressed
+using traditional mechanical methods.
+
+
+\paragrah*{step1}
+\paragrah*{step1}
+\paragrah*{step1}
+\paragrah*{step1}
+\paragrah*{step1}
+
 
 % \section{DESIGN FLOWCHART}
 \section{设计流程图}
