--- a/contents/chp02.tex
+++ b/contents/chp02.tex
@@ -1006,7 +1006,9 @@ bridges can be identified by reviewing major corridors that would experience the
 impact if damaged by these extreme event hazards. Potential mitigation including local protective measures,
 alternative routes, or accelerated reconstruction strategies can be evaluated for these higher-risk bridges.
 
-\subparagraph{Seismic}
+% \subparagraph{Seismic}
+\subparagraph{地震}
+\label{subpar:seismic}
 
 Earthquakes, including those of moderate intensity, are extreme hazard events that can cause significant damage
 to bridges, and particularly to existing bridges that were designed under older codes and have not been retrofitted.
@@ -1330,99 +1332,78 @@ were described in the fault tree analysis in Section 2.3.1. These are:
   \end{itemize}
   \item Defects in production/operation, primarily defective placement, curing and maintenance.
 \end{itemize}
-The degree and severity of concrete deterioration depends on the level of load and environmental influences to
-which the bridge is subjected.
+The degree and severity of concrete deterioration depends on the level of load and environmental influences to which the bridge is subjected.
 
-The durability of concrete exposed to these influences is highly dependent on design practice, materials, and their
-proportioning and workmanship during construction. While all of these influences are important, the principal
-deterioration of concrete elements is the corrosion of steel reinforcement, which results in severe cracking, spalling,
-and delamination of the surrounding concrete. Cracking of the concrete often compromises the protection provided
-by the depassivated zone around the steel reinforcement.
+The durability of concrete exposed to these influences is highly dependent on design practice, materials, and their proportioning and workmanship during construction. While all of these influences are important, the principal deterioration of concrete elements is the corrosion of steel reinforcement, which results in severe cracking, spalling, and delamination of the surrounding concrete. Cracking of the concrete often compromises the protection provided by the depassivated zone around the steel reinforcement.
 
-Concrete superstructures in thermal or marine environments are not exposed to the same concentration of
-chlorides as the top of a bridge deck that may be directly in contact with deicing salts. They are, however, susceptible
-to the same type of corrosion, only at a slower rate through the same mechanism of failure.
+Concrete superstructures in thermal or marine environments are not exposed to the same concentration of chlorides as the top of a bridge deck that may be directly in contact with deicing salts. They are, however, susceptible to the same type of corrosion, only at a slower rate through the same mechanism of failure.
 
 \paragraph{Adjacent Box Beam Deterioration}
-Bridges constructed using adjacent box beams have been in service for many years and have generally performed
-well. However, a recurring problem with non-composite beams is cracking in the grouted joints between adjacent
-units, resulting in reflective cracks in the wearing surface. The development of these longitudinal cracks jeopardizes
-the durability and structural behavior of adjacent box beam bridges. In most cases, the cracking leads to leakage,
-which allows chloride-laden water to penetrate the sides and bottom of the beams and cause corrosion of the non-
-prestressed and prestressed reinforcement, see \cref{fig:longitudinal-cracking-adjacent-box-beam}. In addition, the load distribution among the beams is
-adversely affected, requiring the loaded beams to carry more load than originally intended.
+Bridges constructed using adjacent box beams have been in service for many years and have generally performed well. However, a recurring problem with non-composite beams is cracking in the grouted joints between adjacent units, resulting in reflective cracks in the wearing surface. The development of these longitudinal cracks jeopardizes the durability and structural behavior of adjacent box beam bridges. In most cases, the cracking leads to leakage, which allows chloride-laden water to penetrate the sides and bottom of the beams and cause corrosion of the non-prestressed and prestressed reinforcement, see \cref{fig:longitudinal-cracking-adjacent-box-beam}. In addition, the load distribution among the beams is adversely affected, requiring the loaded beams to carry more load than originally intended.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Longitudinal cracking in adjacent box beam bridge. (Courtesy HDR)}
+  \begin{minipage}{0.5\linewidth}\centering
+    \includegraphics[height=5.2cm]{adjacentbox1.jpg}
+    \subcaption{梁底开裂}
+  \end{minipage}%
+  \begin{minipage}{0.5\linewidth}\centering
+    \includegraphics[height=5.2cm]{adjacentbox2.jpg}
+    \subcaption{路面反射裂缝}
+  \end{minipage}
+  % \caption{Longitudinal cracking in adjacent box beam bridge. (Courtesy HDR)}
+  \caption{\gls*{adjacentbox}桥纵向开裂}
   \label{fig:longitudinal-cracking-adjacent-box-beam}
 \end{figure}
 
-Ultimately, these conditions have led to severe beam deterioration and failure causing premature replacement of
-entire bridges. On December 27, 2005, the east-side fascia beam of the Lakeview Drive Bridge over I-70 in
-Washington, Pennsylvania failed near mid-span and fell to the highway below, as shown in \cref{fig:failure-adjacent-box-beam}. Inspection
-of the bridge revealed heavy spalling and corrosion of the strands on the bottom flange of the failed non-composite
-prestressed concrete box beam. Additional corrosion was revealed on other box beams and the bridge was
-subsequently removed from service.
+Ultimately, these conditions have led to severe beam deterioration and failure causing premature replacement of entire bridges. On December 27, 2005, the east-side fascia beam of the Lakeview Drive Bridge over I-70 in Washington, Pennsylvania failed near mid-span and fell to the highway below, as shown in \cref{fig:failure-adjacent-box-beam}. Inspection of the bridge revealed heavy spalling and corrosion of the strands on the bottom flange of the failed non-composite prestressed concrete box beam. Additional corrosion was revealed on other box beams and the bridge was subsequently removed from service.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Failure of adjacent box beam bridge in Pennsylvania. (Courtesy Pennsylvania DOT)}
+  \includegraphics[width=0.7\linewidth]{failure-adjacent-box.jpg}
+  % \caption{Failure of adjacent box beam bridge in Pennsylvania. (Courtesy Pennsylvania DOT)}
+  \caption{宾夕法尼亚州\gls*{adjacentbox}桥失效}
   \label{fig:failure-adjacent-box-beam}
 \end{figure}
 
 \subsection{Factors Affecting Service Life of Substructure Componet}
 There are numerous causes of substructure deterioration, which can be categorized in three areas:
 \begin{itemize}
-  \item Improper detailing and improper consideration of appropriate forces due to applied mean recurrence level
-  event forces, such as scour, vessel collision and earthquake;
+  \item Improper detailing and improper consideration of appropriate forces due to applied mean recurrence level event forces, such as scour, vessel collision and earthquake;
   \item Deterioration caused by corrosion and section loss, primarily from chloride intrusion; and
   \item Seized bearings and unintended movement restraint.
 \end{itemize}
 
 \subsubsection{Mean Recurrence Level Event Forces}
-As bridge service life increases, bridges are subjected to environmental conditions for a longer period of time.
-Many of these conditions are accounted for in design by the use of traditional recurrence values of extreme
-environmental conditions such as those for hydraulic stages, wind loads, and seismic events. Design for vessel
-impact is treated similarly. The increased service life from 50-year (pre-LRFD) to 75-year (LRFD) to 100-year
-service life increases the statistical probability of exceeding the design recurrence level event.
+As bridge service life increases, bridges are subjected to environmental conditions for a longer period of time. Many of these conditions are accounted for in design by the use of traditional recurrence values of extreme environmental conditions such as those for hydraulic stages, wind loads, and seismic events. Design for vessel impact is treated similarly. The increased service life from 50-year (pre-LRFD) to 75-year (LRFD) to 100-year service life increases the statistical probability of exceeding the design recurrence level event.
 
-The importance of considering these events has been exemplified by numerous bridge incidents, including, but
-not limited to:
+The importance of considering these events has been exemplified by numerous bridge incidents, including, but not limited to:
 \begin{itemize}
-  \item The 1987 collapse of the I-90 Bridge over Schoharie Creek emphasizing the importance of providing
-  adequate hydraulic openings and flow characteristics under bridges. Undermining of embankments, such as
+  \item The 1987 collapse of the I-90 Bridge over Schoharie Creek emphasizing the importance of providing adequate hydraulic openings and flow characteristics under bridges. Undermining of embankments, such as
   shown in \cref{fig:scour-undermining-abutment}, and undermining of pier foundations due to scour remain primary causes of bridge
   failures around the nation.
   \begin{figure}
-    % \includegraphics[width=\linewidth]{graphic-file}
-    \caption{Scour undermining of bridge abutment. (Courtesy Atkins North America, Inc.)}
+    \includegraphics[height=4.8cm]{scour1.jpg}\hfill
+    \includegraphics[height=4.8cm]{scour2.jpg}
+    % \caption{Scour undermining of bridge abutment. (Courtesy Atkins North America, Inc.)}
+    \caption{冲刷导致桥台破坏}
     \label{fig:scour-undermining-abutment}
   \end{figure}
-  \item  Multiple catastrophic vessel and bridge accidents around the world from the 1960s to the mid-1980s (Knott
-  and Larsen 1990), including the 1964 and 1974 collapses of the Pontchartrain Bridge in Louisiana and the
-  1980 collapse of the Sunshine Skyway Bridge in Florida
-  \item Impact forces from motor vehicles, similar to vessel collision, and subsequent fires that have resulted in
-  structural damage to substructure units. Susceptibility to damage from these aberrant vehicle impacts
+  \item  Multiple catastrophic vessel and bridge accidents around the world from the 1960s to the mid-1980s (Knott and Larsen 1990), including the 1964 and 1974 collapses of the Pontchartrain Bridge in Louisiana and the 1980 collapse of the Sunshine Skyway Bridge in Florida
+  \item Impact forces from motor vehicles, similar to vessel collision, and subsequent fires that have resulted in structural damage to substructure units. Susceptibility to damage from these aberrant vehicle impacts
   underscores the importance of pier protection.
-  \item The 1971 San Fernando Earthquake, and subsequent major earthquakes identified in Section 2.3.1.3.6d,
-  which caused catastrophic damage to numerous bridges and stimulated research relating to bridge
-  performance during seismic events (AASHTO 1983).
+  \item The 1971 San Fernando Earthquake, and subsequent major earthquakes identified in \cref{subpar:seismic}, which caused catastrophic damage to numerous bridges and stimulated research relating to bridge performance during seismic events (AASHTO 1983).
 \end{itemize}
 
 \subsubsection{Substructure Deterioration due to Material Deterioration, Corrosion, and Section Loss}
 Corrosion deterioration in substructure elements is due to numerous causes, including:
 \begin{itemize}
-  \item Chloride intrusion due to leakage of expansion joints and bridge drainage where deicing salts are utilized to
-  remove snow and ice from bridge decks,
-  \item Chloride intrusion due to direct salt splash from traffic travelling on roadways below the bridge where
-  deicing salts are utilized to remove snow and ice from the pavement,
-  \item Chloride intrusion found in marine and brackish water environments affecting exposed elements such as
-  those shown in \cref{fig:marine-pile-degradation}, and
+  \item Chloride intrusion due to leakage of expansion joints and bridge drainage where deicing salts are utilized to remove snow and ice from bridge decks,
+  \item Chloride intrusion due to direct salt splash from traffic travelling on roadways below the bridge where deicing salts are utilized to remove snow and ice from the pavement,
+  \item Chloride intrusion found in marine and brackish water environments affecting exposed elements such as  those shown in \cref{fig:marine-pile-degradation}, and
   \begin{figure}
-    % \includegraphics[width=\linewidth]{graphic-file}
-    \caption{Marine pile degradation—jacket failure on concrete pile and corroded steel pile. (Courtesy Atkins North
-    America, Inc.)}
+    \includegraphics[height=8cm]{marine-pile1.jpg}\hfill
+    \includegraphics[height=8cm]{marine-pile2.jpg}
+    % \caption{Marine pile degradation—jacket failure on concrete pile and corroded steel pile. (Courtesy Atkins North America, Inc.)}
+    \caption{海洋环境桩基退化——混凝土桩和腐蚀的钢桩上的导管架失效。}
     \label{fig:marine-pile-degradation}
   \end{figure}
   \item  Corrosion due to concrete cracking induced by alkali-silica reaction (ASR) and other concrete quality issues.
@@ -1439,11 +1420,7 @@ Degradation of concrete and steel structures in aggressive corrosive environment
 marine environment, has historically led to a reduction in service life of numerous structures. The areas particularly
 susceptible to chloride intrusion are the splash zone, areas of poor concrete consolidation, spalls, and pile splices.
 
-The degradation of piles and other deep foundation elements in marine environments has spawned an enormous
-concrete and steel protection and repair industry, which has developed numerous products dealing with the
-preservation of these deteriorating structural elements (Heffron 2007). Many of these products are relatively new, and
-their long-term effectiveness and expected life are not verifiable with historic data. Some of the more promising
-techniques include:
+The degradation of piles and other deep foundation elements in marine environments has spawned an enormous concrete and steel protection and repair industry, which has developed numerous products dealing with the preservation of these deteriorating structural elements (Heffron 2007). Many of these products are relatively new, and their long-term effectiveness and expected life are not verifiable with historic data. Some of the more promising techniques include:
 
 \begin{itemize}
   \item Cathodic protection with embedded sacrificial anodes;
@@ -1455,22 +1432,18 @@ techniques include:
 \end{itemize}
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Pile restoration with pile encapsulation and epoxy grout fill. (Courtesy Atkins North America, Inc.)}
+  \includegraphics[height=5.5cm]{pile-restoration1.jpg}\hfill
+  \includegraphics[height=5.5cm]{pile-restoration2.jpg}
+  % \caption{Pile restoration with pile encapsulation and epoxy grout fill. (Courtesy Atkins North America, Inc.)}
+  \caption{通过桩包封和环氧灌浆填充进行桩基修复}
   \label{fig:pile-restoration-pile-encapsulation}
 \end{figure}
 
 \subsubsection{Potential Effect of Climate Change and Service Life of Bridges in Coastal Areas}
-Climate-related impacts that require adaptation are already being observed in the United States and its coastal
-waters (USGCRP 2009) and empirical evidence suggests that many of these and other impacts will grow in severity in the future (USGCRP 2009). Sea level has increased along most of the U.S. coast over the past 50 years, with some
-areas along the Atlantic and Gulf coasts experiencing increases of greater than 8 in.
 
-\cref{fig:sea-level-rise-1990-2100} shows the projected sea level rise through 2100. The data is based on IPCC temperature projections
-for three different GHG emissions scenarios (shaded areas, labeled on right). The outer light gray area represents
-additional uncertainty in the projections due to uncertainty in the fit between temperature rise and sea level rise. All
-of these projections are considerably larger than the sea level rise estimates for 2100 provided in IPCC AR4 (vertical
-bars), which did not account for potential changes in ice sheet dynamics and are considered conservative. Also shown
-are the observations of annual global sea level rise over the past half-century (line), relative to 1990.
+Climate-related impacts that require adaptation are already being observed in the United States and its coastal waters (USGCRP 2009) and empirical evidence suggests that many of these and other impacts will grow in severity in the future (USGCRP 2009). Sea level has increased along most of the U.S. coast over the past 50 years, with some areas along the Atlantic and Gulf coasts experiencing increases of greater than 8 in.
+
+\cref{fig:sea-level-rise-1990-2100} shows the projected sea level rise through 2100. The data is based on IPCC temperature projections for three different GHG emissions scenarios (shaded areas, labeled on right). The outer light gray area represents additional uncertainty in the projections due to uncertainty in the fit between temperature rise and sea level rise. All of these projections are considerably larger than the sea level rise estimates for 2100 provided in IPCC AR4 (vertical bars), which did not account for potential changes in ice sheet dynamics and are considered conservative. Also shown are the observations of annual global sea level rise over the past half-century (line), relative to 1990.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
@@ -1721,31 +1694,19 @@ bearings.
 
 \subsubsection*{Hydraulic Action}
 \paragraph*{Flood/Storm Surge}
-Following hurricanes Ivan (2004) and Rita (2005), which damaged numerous bridges along the Gulf coast, the
-FHWA along with 10 states sponsored a study that culminated in the development of the AASHTO Guide
-Specifications for Bridges Vulnerable to Coastal Storms (AASHTO 2008). This guide specification recommends
-that where practical, a vertical clearance of at least 1-ft above the 100-year design wave crest elevation, which
-includes the design storm water elevation, should be provided. The study further recommends additional freeboard
-due to the large uncertainty in the basic wave and surge data needed to determine the wave crest elevation. If this vertical clearance is not possible, the bridge should be analyzed and designed to resist storm wave forces, and other
-wave force mitigation measures should be implemented, such as venting to reduce buoyancy forces.
+Following hurricanes Ivan (2004) and Rita (2005), which damaged numerous bridges along the Gulf coast, the FHWA along with 10 states sponsored a study that culminated in the development of the AASHTO Guide Specifications for Bridges Vulnerable to Coastal Storms (AASHTO 2008). This guide specification recommends that where practical, a vertical clearance of at least 1-ft above the 100-year design wave crest elevation, which includes the design storm water elevation, should be provided. The study further recommends additional freeboard due to the large uncertainty in the basic wave and surge data needed to determine the wave crest elevation. If this vertical clearance is not possible, the bridge should be analyzed and designed to resist storm wave forces, and other wave force mitigation measures should be implemented, such as venting to reduce buoyancy forces.
 
-Florida DOT issued a Temporary Design Bulletin C09-08 (FDOT 2009), which required the implementation of
-the AASHTO Guide Specifications for Bridges Vulnerable to Coastal Storms discussed above.
+Florida DOT issued a Temporary Design Bulletin C09-08 (FDOT 2009), which required the implementation of the AASHTO Guide Specifications for Bridges Vulnerable to Coastal Storms discussed above.
 
-In the Florida DOT bulletin, the importance or criticality of bridges is a factor in evaluating the risk of damage
-and potential consequences.
+In the Florida DOT bulletin, the importance or criticality of bridges is a factor in evaluating the risk of damage and potential consequences.
 
 \begin{table}
   \caption{Bridge Importance Level}
   \label{tab:bridge-importance-level}
-  % \input{tables/bridge-importance-level}
+  \input{tables/bridge-importance-level}
 \end{table}
 
-Florida DOT further recommends that for all bridges subject to coastal storms, simple and inexpensive measures
-that enhance a structure’s capacity to resist storm forces should be implemented. For example, placing vents in all
-diaphragms and venting all bays will reduce the effects of buoyancy forces on a structure.
- Anchoring the
-superstructure to the substructure to reduce or prevent damage from storm surges should also be considered.
+Florida DOT further recommends that for all bridges subject to coastal storms, simple and inexpensive measures that enhance a structure’s capacity to resist storm forces should be implemented. For example, placing vents in all diaphragms and venting all bays will reduce the effects of buoyancy forces on a structure. Anchoring the superstructure to the substructure to reduce or prevent damage from storm surges should also be considered.
 
 
 \paragraph*{Scour}
