--- a/contents/chp03.tex
+++ b/contents/chp03.tex
@@ -6,7 +6,7 @@
 本章提供有关用于建造耐用桥梁结构的材料的基本信息。它侧重于与桥梁建设中广泛使用的混凝土和钢材相关的耐久性和\gls*{servicelife}问题，并提供有关桥梁建设中使用的其他材料类型的有限信息。
 
 % Information for enhancing the service life of materials used in bridge systems, subsystems, and components is summarized. \cref{fig:mat-enhance-selection-process} identifies the materials-enhancement selection process used, and this chapter follows the structure of that process which begins with developing an understanding of the types of materials. These viable materials are further evaluated for the factors that adversely affect their service life. Individual strategies are then developed to mitigate these adverse effects. The overall strategy selection is then developed, blending these individual strategies that are sometimes in conflict with each other. The components of an overall strategy should:
-在此总结了用于提高桥梁\gls*{system}、\gls*{subsystem}和\gls*{component}所用材料\gls*{servicelife}的信息。 \cref{fig:mat-enhance-selection-process} 标识了所使用的材料优选过程，该过程从理解材料类型开始，本章内容则遵循该过程的结构。 这些可行的材料将进一步评估对其\gls*{servicelife}产生不利影响的因素，然后制定单独的策略来减轻这些不利影响，然后制定总体策略的选择，融合这些有时相互冲突的个别策略。 总体战略的组成部分应该：
+在此总结了用于提高桥梁\gls*{system}、\gls*{subsystem}和\gls*{component}所用材料\gls*{servicelife}的信息。\cref{fig:mat-enhance-selection-process} 标识了所使用的材料优选过程，该过程从理解材料类型开始，本章内容则遵循该过程的结构。 这些可行的材料将进一步评估对其\gls*{servicelife}产生不利影响的因素，然后制定单独的策略来减轻这些不利影响，然后制定总体策略的选择，融合这些有时相互冲突的个别策略。 总体战略的组成部分应该：
 
 % \begin{itemize}
   % \item Identify appropriate design methodologies;
@@ -195,7 +195,8 @@
 % In the United States, lightweight aggregate is typically manufactured by expanding shale, clay, or slate by firing the materials at high temperatures in a rotary kiln. At high temperatures, gases are evolved within the pyroplastic mass, forming bubbles that remain after cooling (ACI 213R, 2003). The cellular structure of LWA results in a density that is lower than normal weight aggregate. When used in concrete, LWA reduces the density of concrete.
 在美国，轻骨料通常是通过在回转窑中高温烧制页岩、粘土或板岩来膨胀这些材料来制造的。 在高温下，气体在热塑物质中产生，形成冷却后残留的气泡（ACI 213R，2003）。 \acrlong*{lwa}的细胞结构导致密度低于正常重量的骨料。 当用于混凝土时，\acrlong*{lwa}会降低混凝土的密度。
 
-The porous structure of LWA absorbs more water than the normal weight aggregates. Pores close to the surface are readily permeable, but interior pores are hard to fill. Many of the interior pores are not connected to the surface at all. Water absorbed in the surface pores by pre-wetting prior to batching is released into the paste during hydration of the cement, which provides internal curing (Holm and Ries 2006) which in turn results in improved properties and reduced cracking within the concrete.
+% The porous structure of LWA absorbs more water than the normal weight aggregates. Pores close to the surface are readily permeable, but interior pores are hard to fill. Many of the interior pores are not connected to the surface at all. Water absorbed in the surface pores by pre-wetting prior to batching is released into the paste during hydration of the cement, which provides internal curing (Holm and Ries 2006) which in turn results in improved properties and reduced cracking within the concrete.
+LWA的多孔结构比正常重量的骨料吸收更多的水。靠近表面的孔隙很容易渗透，但内部孔隙很难填充。许多内部孔隙根本不与表面相连。在配料前通过预润湿在表面孔隙中吸收的水在水泥水化过程中释放到糊状物中，从而提供内部固化（Holm and Ries 2006），从而改善性能并减少混凝土内的开裂。
 
 Lightweight aggregate used in structural lightweight concrete (LWC) must be capable of producing concrete with a minimum 28-day compressive strength of 2,500 psi with an equilibrium density between 70- and 120-lb/ft3 (ACI 213R, 2003). The strength of LWA varies with type and source and will affect the strength of lightweight concrete that can be achieved.
 
@@ -262,7 +263,7 @@ Concrete can resist most natural environments and many chemicals. However, certa
 
 % \paragraph{High Performance Concrete (HPC)}
 \paragraph{\acrfull*{hpc}}
-High performance concretes exhibit high workability, strength, and/or durability. FHWA proposed to define high performance concrete using long-term performance criteria (Goodspeed et al. 1996). The goal was to stimulate the use of higher quality concrete in highway structures. HPC has been used in decks, superstructures, and substructures to extend the service life. The definition of HPC developed for the FHWA (Goodspeed et al. 1996) had four performance parameters related to durability as shown in Table 3.4:
+High performance concretes exhibit high workability, strength, and/or durability. FHWA proposed to define high performance concrete using long-term performance criteria (Goodspeed et al. 1996). The goal was to stimulate the use of higher quality concrete in highway structures. HPC has been used in decks, superstructures, and substructures to extend the service life. The definition of HPC developed for the FHWA (Goodspeed et al. 1996) had four performance parameters related to durability as shown in \cref{tab:grade-hpc}:
 
 \begin{itemize}
   \item Resistance to freezing and thawing,
@@ -274,7 +275,8 @@ High performance concretes exhibit high workability, strength, and/or durability
 The four structural design characteristics were compressive strength, modulus of elasticity, shrinkage, and creep. The tensile strength which is related to compressive strength, modulus of elasticity, shrinkage, and creep is an important factor affecting the cracking potential. For each characteristic, standard laboratory tests, specimen preparation procedures, and grades of performance were presented. Later additions to this definition and changes to the grade limits were recommended (Russell and Ozyildirim 2006) and are summarized in \cref{tab:additional-grade}. These included ASR- and sulfate-resistance. Workability was also added as a characteristic and would affect durability since concrete should be well consolidated (either through vibration or self consolidation) in order to achieve the desired hardened concrete properties. Another characteristic to be considered is density. Concretes with varying densities varying from light weight to normal weight can be prepared to address the dead load in spanning long distances.
 
 \begin{table}
-  \caption{Grades of Performance Characteristics for High Performance Structural Concrete. (Goodspeed et al. 1996)}\label{tab:grade-hpc}
+  \caption{Grades of Performance Characteristics for High Performance Structural Concrete. (Goodspeed et al. 1996)}
+  \label{tab:grade-hpc}
   % \input{tables/grade-hpc}
 \end{table}
 
@@ -285,14 +287,9 @@ The four structural design characteristics were compressive strength, modulus of
 
 % \paragraph{Self-Consolidating Concrete (SCC)}
 \paragraph{\acrfull*{scc}}
-Self-consolidating concrete is a highly-flowable, non-segregating concrete that can spread into place, fill the formwork, and encapsulate the reinforcement without any mechanical consolidation (ACI 237R, 2007). SCC
-contains a large amount of fine material to obtain a stable mixture; sometimes a viscosity modifying admixture is used to provide the stability instead of, or in combination with, the fine material. The high range water reducing admixtures (HRWRA) used are generally based on polycarboxylate ethers; they provide large water reductions and slow slump loss. Eliminating the consolidation problem would enhance the strength and reduce the permeability of concretes, essential characteristics for longevity. SCC has been used in Japan since the late 1980s (ACI 237R, 2007) and is used widely in the precast industry in North America, while its use in the ready mixed concrete industry has been slower. Some of the benefits of SCC are decreased labor requirements, increased construction speed, improved mechanical properties and durability characteristics, ability to be used in heavily reinforced and congested areas, consolidation without vibration, and a reduced noise level at manufacturing plants and construction sites (Okamura and Ouchi 1999). The flow characteristic of SCC is measured using the slump flow test (\acrshort*{astm} C1611). The stability of the mixture can be qualitatively assessed in accordance with \acrshort*{astm} C1611 using the visual stability index (VSI). A VSI value of zero indicates a highly stable mix with no evidence of segregation or bleeding; 1 is a stable mix with no evidence of segregation but with slight bleeding; VSI 2 and 3 indicate unstable mixtures. To determine the ability of SCC to pass through the reinforcement, a J-Ring test is used (\acrshort*{astm} C1621). \acrshort*{astm} C1610 addresses the determination of static segregation of SCC by measuring the coarse aggregate content in the top and bottom portions of a column. SCC is placed in a column separated into three sections. The coarse aggregate in the top and bottom sections is removed by washing. Another \acrshort*{astm} test method, C1712, covers the rapid assessment of static segregation resistance of normal-weight SCC. This test does not measure static segregation resistance directly, but rather provides an assessment of whether static segregation is likely to occur.
+Self-consolidating concrete is a highly-flowable, non-segregating concrete that can spread into place, fill the formwork, and encapsulate the reinforcement without any mechanical consolidation (ACI 237R, 2007). SCC contains a large amount of fine material to obtain a stable mixture; sometimes a viscosity modifying admixture is used to provide the stability instead of, or in combination with, the fine material. The high range water reducing admixtures (HRWRA) used are generally based on polycarboxylate ethers; they provide large water reductions and slow slump loss. Eliminating the consolidation problem would enhance the strength and reduce the permeability of concretes, essential characteristics for longevity. SCC has been used in Japan since the late 1980s (ACI 237R, 2007) and is used widely in the precast industry in North America, while its use in the ready mixed concrete industry has been slower. Some of the benefits of SCC are decreased labor requirements, increased construction speed, improved mechanical properties and durability characteristics, ability to be used in heavily reinforced and congested areas, consolidation without vibration, and a reduced noise level at manufacturing plants and construction sites (Okamura and Ouchi 1999). The flow characteristic of SCC is measured using the slump flow test (\acrshort*{astm} C1611). The stability of the mixture can be qualitatively assessed in accordance with \acrshort*{astm} C1611 using the visual stability index (VSI). A VSI value of zero indicates a highly stable mix with no evidence of segregation or bleeding; 1 is a stable mix with no evidence of segregation but with slight bleeding; VSI 2 and 3 indicate unstable mixtures. To determine the ability of SCC to pass through the reinforcement, a J-Ring test is used (\acrshort*{astm} C1621). \acrshort*{astm} C1610 addresses the determination of static segregation of SCC by measuring the coarse aggregate content in the top and bottom portions of a column. SCC is placed in a column separated into three sections. The coarse aggregate in the top and bottom sections is removed by washing. Another \acrshort*{astm} test method, C1712, covers the rapid assessment of static segregation resistance of normal-weight SCC. This test does not measure static segregation resistance directly, but rather provides an assessment of whether static segregation is likely to occur.
 
-There are some concerns about the use of SCC, among them segregation due to a high flow rate, a poor air void
-system due to the high fluidity, and high amounts of HRWRA resulting in coarse air bubbles, shrinkage due to
-smaller maximum size aggregate and lower amount of coarse aggregate, and form pressure and tightness due to high
-fluidity (ACI 237R, 2007). SCC has been used successfully in beams (Ozyildirim 2008), drilled shafts (Schindler
-and Brown 2006), substructure repairs, and tunnel sections (ACI 237R, 2007).
+There are some concerns about the use of SCC, among them segregation due to a high flow rate, a poor air void system due to the high fluidity, and high amounts of HRWRA resulting in coarse air bubbles, shrinkage due to smaller maximum size aggregate and lower amount of coarse aggregate, and form pressure and tightness due to high fluidity (ACI 237R, 2007). SCC has been used successfully in beams (Ozyildirim 2008), drilled shafts (Schindler and Brown 2006), substructure repairs, and tunnel sections (ACI 237R, 2007).
 
 % \paragraph{Ultra-High Performance Concrete (UHPC)}
 \paragraph{\acrfull*{uhpc}}
@@ -941,32 +938,25 @@ can indicate temperature differences higher than 35°F without adverse effects. 
 calculations are often used to develop temperature difference limits.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Mass concrete; footings and columns. (Courtesy Virginia DOT)}\label{fig:mass-concrete}
+  \includegraphics[width=0.7\linewidth]{mass-concrete.jpg}
+  % \caption{Mass concrete; footings and columns. (Courtesy Virginia DOT)}
+  \caption{大体积混凝土：立柱与基础}
+  \label{fig:mass-concrete}
 \end{figure}
 
-Also, high temperatures exceeding 160°F during the first few hours following placement can lead to delayed
-ettringite formation (DEF) at later ages. Ettringite forms when gypsum and other sulfate compounds react with
-calcium aluminate in cement in the first few hours after mixing with water (Kosmatka and Wilson 2011). However,
-at high temperatures the normal formation of ettringite during the first few hours is impeded and DEF occurs in
-hardened concrete, which can crack the concrete. Heat related cracking can also occur in bridge decks that are
-typically not considered to be mass concrete (Figure 3.6). In this case the bridge beams restrain temperature related
-movement of the deck. The heat of hydration causes the deck to expand and then contract during cooling and the
-beams restrain the movement. To prevent the strains and resulting tensile stresses, a maximum temperature
-differential of 22°F between the beams and the deck is recommended for at least 24 hours following concrete
-placement (Babaei and Fouladgar 1997). As in the mass concrete, higher temperatures may be justified, but require
-detailed analysis to justify. To minimize the potential for temperature-related cracking, the amount of portland
-cement should be minimized, concrete delivery temperature reduced, and pozzolans and slag included in the mixture.
-With proper temperature management thermal cracks can be minimized and controlled.
+Also, high temperatures exceeding 160°F during the first few hours following placement can lead to delayed ettringite formation (DEF) at later ages. Ettringite forms when gypsum and other sulfate compounds react with calcium aluminate in cement in the first few hours after mixing with water (Kosmatka and Wilson 2011). However, at high temperatures the normal formation of ettringite during the first few hours is impeded and DEF occurs in hardened concrete, which can crack the concrete. Heat related cracking can also occur in bridge decks that are typically not considered to be mass concrete (\cref{fig:thermal-cracks}). In this case the bridge beams restrain temperature related movement of the deck. The heat of hydration causes the deck to expand and then contract during cooling and the beams restrain the movement. To prevent the strains and resulting tensile stresses, a maximum temperature differential of 22°F between the beams and the deck is recommended for at least 24 hours following concrete placement (Babaei and Fouladgar 1997). As in the mass concrete, higher temperatures may be justified, but require detailed analysis to justify. To minimize the potential for temperature-related cracking, the amount of portland cement should be minimized, concrete delivery temperature reduced, and pozzolans and slag included in the mixture. With proper temperature management thermal cracks can be minimized and controlled.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Thermal cracks in bridge deck. (Courtesy Virginia DOT)}\label{fig:thermal-cracks}
+  \includegraphics[width=0.6\linewidth]{thermal-cracks.jpg}
+  % \caption{Thermal cracks in bridge deck. (Courtesy Virginia DOT)}
+  \caption{桥面板的温度裂缝}
+  \label{fig:thermal-cracks}
 \end{figure}
 
 Volumetric changes also occur due to freezing and thawing cycles and chemical (corrosion, ASR, ACR) reactions.
 
 \subsubsection{Prevention of Distress}
+
 \paragraph{Surface Treatments}
 Surface treatments, membranes, sealers, and overlays are widely used to reduce solution infiltration. They
 protect the deck concrete from deterioration induced by freeze/thaw cycles, and protect the reinforcement from
@@ -1026,29 +1016,36 @@ formation of disruptive products. The fineness of the cementitious material affe
 demand. At high water w/cm, permeability is increased and durability is reduced. The presence of certain chemicals
 in sufficient amounts in the cements contributes to the expansion. A further explanation follows.
 
-\subparagraph{Alkali-Aggregate Reaction (AAR)}
+% \subparagraph{Alkali-Aggregate Reaction (AAR)}
+\subparagraph{\acrfull*{aar}}
 Alkali-aggregate reactions are the reactions between the hydroxide ions in the pore fluid of concrete, usually
 associated with alkalis from the cement or from outside sources such as deicing salts, and the reactive constituents of
 the aggregates (ACI 221.1R, 1998). This reaction results in expansion and cracking.
-\subparagraph{Alkali-Silica Reaction (ASR)}
+% \subparagraph{Alkali-Silica Reaction (ASR)}
+\subparagraph{\acrfull*{asr}}
 A chemical reaction between aggregates containing reactive silica and the alkalis in concrete can produce an
 alkali-silica gel that swells when water is absorbed. The high pressures generated within the concrete lead to
-cracking (Figure 3.7). To prevent ASR, non-reactive aggregates, or pozzolanic materials or slag, lithium nitrate, lowpermeability
+cracking (\cref{fig:asr}). To prevent ASR, non-reactive aggregates, or pozzolanic materials or slag, lithium nitrate, lowpermeability
 concrete and cements with low alkali contents are used.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{ASR. (Courtesy Virginia DOT)}\label{fig:asr}
+  \includegraphics[width=0.6\linewidth]{asr.jpg}
+  % \caption{ASR. (Courtesy Virginia DOT)}
+  \caption{\acrlong*{asr}}
+  \label{fig:asr}
 \end{figure}
 
-\subparagraph{Alkali-Carbonate Reaction (ACR)}
-Some argillaceous, dolomitic aggregates can react with alkalis, causing the aggregates to expand. Figure 3.8
+% \subparagraph{Alkali-Carbonate Reaction (ACR)}
+\subparagraph{\acrfull*{acr}}
+Some argillaceous, dolomitic aggregates can react with alkalis, causing the aggregates to expand. \cref{fig:acr}
 shows a joint closing due to ACR expansion. A common prevention for ACR is to avoid using reactive aggregate or
 to dilute the aggregate by blending with non-reactive aggregate.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Closing of joints due to ACR. (Courtesy Virginia DOT)}\label{fig:acr}
+  \includegraphics[width=0.6\linewidth]{acr.jpg}
+  % \caption{Closing of joints due to ACR. (Courtesy Virginia DOT)}
+  \caption{由\acrlong*{acr}引起的接缝闭合}
+  \label{fig:acr}
 \end{figure}
 
 \subparagraph{Carbonation}
@@ -1059,61 +1056,52 @@ protective layer over the steel (Neville 1995).
 \subparagraph{Chlorides}
 Chlorides which penetrate the concrete and reach the steel surface destroy the protective oxide layer making
 reinforcement prone to corrosion. Without the protective layer, steel will corrode rapidly in the presence of water
-and oxygen. The corrosion of steel is accompanied by expansive pressures, which lead to cracking (Figure 3.9). To
+and oxygen. The corrosion of steel is accompanied by expansive pressures, which lead to cracking (\cref{fig:chlorides-corrosion}). To
 stabilize the passive oxide layer on the reinforcement, corrosion inhibiting admixtures can be used or, viscosity
 modifying admixtures can be added to improve the stability of the mix.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Corrosion. (Courtesy Virginia DOT)}\label{fig:chlorides-corrosion}
+  \includegraphics[width=0.6\linewidth]{chlorides-corrosion.jpg}
+  % \caption{Corrosion. (Courtesy Virginia DOT)}
+  \caption{腐蚀}
+  \label{fig:chlorides-corrosion}
 \end{figure}
 
 \subparagraph{Sulfates}
-Sulfates react with the Ca(OH)2 and the calcium aluminate hydrates causing expansive reactions that can affect
-the cement paste (Neville 1995). Figure 3.10 displays the loss of material due to sulfate attack. To increase the
-resistance of concrete to sulfate attack a low C3A, tricalcium aluminate, content, low quantities of Ca(OH)2, calcium
+Sulfates react with the \ce{Ca(OH)2} and the calcium aluminate hydrates causing expansive reactions that can affect
+the cement paste (Neville 1995). \cref{fig:sulfate} displays the loss of material due to sulfate attack. To increase the
+resistance of concrete to sulfate attack a low C3A, tricalcium aluminate, content, low quantities of \ce{Ca(OH)2}, calcium
 hydroxide (lime), in the cement paste, and low permeability concrete is needed. These results can be obtained by
 using sulfate resistant cements and use of pozzolans.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Sulfate attack. (Courtesy Virginia DOT)}\label{fig:salfate}
+  \includegraphics[width=0.6\linewidth]{sulfate.jpg}
+  % \caption{Sulfate attack. (Courtesy Virginia DOT)}
+  \caption{硫酸盐侵袭}
+  \label{fig:sulfate}
 \end{figure}
 
 
 \subparagraph{Acids}
-Pollutants cause acid rain that can cause deterioration (Neville 1995). In damp conditions, SO2, CO2, SO3 and
-other acid forms that are present in the atmosphere may attack concrete by dissolving in water and removing parts of
-the cement paste. These acids will leave a soft and mushy mass behind (Eglinton 1975). To minimize acid attack,
-low-permeability concrete and barrier coatings may be used. A barrier material separates the concrete surface from
+Pollutants cause acid rain that can cause deterioration (Neville 1995). In damp conditions, \ce{SO2}, \ce{CO2}, \ce{SO3} and other acid forms that are present in the atmosphere may attack concrete by dissolving in water and removing parts of the cement paste. These acids will leave a soft and mushy mass behind (Eglinton 1975). To minimize acid attack, low-permeability concrete and barrier coatings may be used. A barrier material separates the concrete surface from
 the environment.
 
 
 \subparagraph{Salts}
-Chloride bearing deicing chemicals initiate and accelerate corrosion. Magnesium salts are very damaging to
-concrete causing crumbling (Lee et al. 2000). Calcium magnesium acetate has been suggested to prevent corrosion
-but was found to be very damaging to concrete. Deicing chemicals can also aggravate freeze/thaw deterioration.
-Osmotic pressure occurs since moisture tends to move towards zones with higher salt concentrations. In addition the
-salts increase the rate of cooling causing an increase in the potential for freeze/thaw deterioration at the concrete
-surface. Proper air entrainment and maturity are also needed to provide the necessary protection.
+Chloride bearing deicing chemicals initiate and accelerate corrosion. Magnesium salts are very damaging to concrete causing crumbling (Lee et al. 2000). Calcium magnesium acetate has been suggested to prevent corrosion but was found to be very damaging to concrete. Deicing chemicals can also aggravate freeze/thaw deterioration. Osmotic pressure occurs since moisture tends to move towards zones with higher salt concentrations. In addition the salts increase the rate of cooling causing an increase in the potential for freeze/thaw deterioration at the concrete surface. Proper air entrainment and maturity are also needed to provide the necessary protection.
 
 
 \paragraph{Functional Considerations}
-Functional considerations include vibrations, impact, concrete consolidation, concrete curing, and concrete
-placement.
+Functional considerations include vibrations, impact, concrete consolidation, concrete curing, and concrete placement.
 
 \subparagraph{Vibrations}
-Vibration of fresh concrete using vibrators may cause loss of air in mixtures with a high sand content and could
-result in freeze/thaw damage. In these mixtures, the frequency and duration of vibration should be reduced to
-prevent segregation (loss of stability) and loss of air. A recommended practice is to prepare mixtures with a large
-amount of coarse aggregate content. However, in some regions where D-cracking (Figure 3.11) is an issue the size
-and amount of coarse aggregate is reduced which leads to mixtures with an excessive sand content. In D-cracking,
-the aggregate has a pore structure that hinders the expulsion of water from the aggregate pores during freezing
-resulting in the cracking of the aggregate and concrete.
+Vibration of fresh concrete using vibrators may cause loss of air in mixtures with a high sand content and could result in freeze/thaw damage. In these mixtures, the frequency and duration of vibration should be reduced to prevent segregation (loss of stability) and loss of air. A recommended practice is to prepare mixtures with a large amount of coarse aggregate content. However, in some regions where D-cracking (\cref{fig:d-cracking}) is an issue the size and amount of coarse aggregate is reduced which leads to mixtures with an excessive sand content. In D-cracking, the aggregate has a pore structure that hinders the expulsion of water from the aggregate pores during freezing resulting in the cracking of the aggregate and concrete.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{D-cracking. (Courtesy of PCA)}\label{fig:d-cracking}
+  \includegraphics[width=0.6\linewidth]{d-cracking.jpg}
+  % \caption{D-cracking. (Courtesy of PCA)}
+  \caption{D-cracking. (Courtesy of PCA)}
+  \label{fig:d-cracking}
 \end{figure}
 
 Concrete can exhibit fatigue behavior when subjected to cyclic loading of a given level, below its short-term
@@ -1230,9 +1218,10 @@ steel specimens. During visual inspection of the slabs, only one of the bars exh
 to be minor.
 
 \begin{figure}
-  % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Stainless steel-clad reinforcement (disbondment after cutting). (Deshpande et al.
-  2000)}\label{fig:stainless-reinforcement}
+  \includegraphics[width=0.6\linewidth]{stainless-reinforcement.jpg}
+  % \caption{Stainless steel-clad reinforcement (disbondment after cutting). (Deshpande et al. 2000)}
+  \caption{Stainless steel-clad reinforcement (disbondment after cutting). (Deshpande et al. 2000)}
+  \label{fig:stainless-reinforcement}
 \end{figure}
 
 \paragraph{Nickel-Clad Reinforcing Bars}
@@ -1316,6 +1305,16 @@ members would also eliminate the formation of cracks.
 \section{使用\glsentrytext{faulttree}分析影响\glsentrytext{servicelife}的因素}
 \label{sec:factor-influence-fault-tree}
 \subsection{Service Life of Concrete}
+Concrete deterioration is caused by deficiencies in one or more factors listed as materials, design, and workmanship; the effect of external factors; and the occurrence of cracks. These factors are shown in the main fault tree (\cref{fig:faulttree-concrete-reduced-main}) and are explained in additional detail in the fault trees for each factor, Figures 3.14 to 3.19.
+
+\begin{figure}
+  % \includegraphics{fig:faulttree-concrete-reduced-main.pdf}
+  % \caption{Concrete reduced service life main fault tree.}
+  \caption{Concrete reduced service life main fault tree.}
+  \label{fig:faulttree-concrete-reduced-main}
+\end{figure}
+
+
 \subsubsection{Material}
 Material-related factors are shown in Figure 3.14. They include the ingredients of the concrete—the
 cementitious material, aggregates, water, admixtures, and fibers. The water-cementitious materials ratio (w/cm) is
@@ -1330,17 +1329,22 @@ low permeability concretes leading to improved durability. Fibers are used to co
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Materials fault tree.}\label{fig:fault-tree-material}
+  % \caption{Materials fault tree.}
+  \caption{材料\gls*{faulttree}}
+  \label{fig:fault-tree-material}
 \end{figure}
 
 \subsubsection{Design}
-Design of the structure through the selection of the geometry, detailing, and flexibility affects the performance of
-the concrete. The design fault tree is shown in Figure 3.15. In the geometry, the cover depth over the reinforcement
-has a large influence on the salt intrusion to the level of steel. Thicker decks provide more rigidity and less cracking
-potential. Long-span length causes more flexibility, increasing the possibility of cracking.
+Design of the structure through the selection of the geometry, detailing, and flexibility affects the performance of the concrete. The design fault tree is shown in \cref{fig:faulttree-design}. In the geometry, the cover depth over the reinforcement has a large influence on the salt intrusion to the level of steel. Thicker decks provide more rigidity and less cracking potential. Long-span length causes more flexibility, increasing the possibility of cracking.
 
-Design details which minimize saturation with water would lead to improved durability. Eliminating joints is
-desirable since joints cause leakage problems.
+Design details which minimize saturation with water would lead to improved durability. Eliminating joints is desirable since joints cause leakage problems.
+
+\begin{figure}
+  % \includegraphics[width=\linewidth]{faulttree-design.pdf}
+  % \caption{Design fault tree}
+  \caption{设计\gls*{faulttree}}
+  \label{fig:faulttree-design}
+\end{figure}
 
 \subsubsection{Workmanship}
 Workmanship is important in achieving the desired durability; the materials have to be fabricated properly under
@@ -1363,7 +1367,9 @@ wet curing of decks.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Workmanship fault tree.}\label{fig:fault-tree-workmanship}
+  % \caption{Workmanship fault tree.}
+  \caption{Workmanship fault tree.}
+  \label{fig:fault-tree-workmanship}
 \end{figure}
 
 \subsubsection{External Factors}
@@ -1387,8 +1393,10 @@ the favorable temperature needed for the hydration reactions.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Load fault tree.}\label{fig:fault-tree-load} 
+  \caption{Load fault tree.}
+  \label{fig:fault-tree-load} 
 \end{figure}
+
 \paragraph{Environment}
 Environment can provoke damage in structures caused by physical and/or chemical factors. The physical factors
 are the result of freezing and thawing of critically saturated concrete, scaling of surfaces due to salt concentrations or
@@ -1398,45 +1406,39 @@ vulnerable to corrosion; sulfate attack; or expansion due to alkali-aggregate or
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Environment fault tree.}\label{fig:fault-tree-environment} 
+  \caption{Environment fault tree.}
+  \label{fig:fault-tree-environment} 
 \end{figure}
 
 \paragraph{Cracking}
-Cracking of concrete can cause serious and costly damage to concrete structures. The cracking fault tree is
-shown in Figure 3.19. The factors affecting cracking can be due to design, materials, and/or construction. In the case
-of design, the factors of interest include the restraint, span type, deck thickness, girder type, or the steel alignment
-and location. When concrete is restrained, deformations result in stresses. Flexible structures and low rigidity lead to
-additional cracks. For example, decks on steel beams exhibit additional cracking compared to decks on rigid
-concrete beams. High modulus and low creep that can be beneficial in reducing prestress losses and deflections in
-beams, can lead to additional cracking in decks. High modulus leads to brittle structures and low creep does not
-enable relaxation that reduces stresses. It can be expected that low water-cementitious material ratios, high paste contents, and high heat of hydration can cause additional cracking. Concretes with low w/cm are brittle and more
-sensitive to curing. Concretes with high water, cement, and paste content exhibit additional shrinkage and additional
-temperature rise During construction and afterwards, the weather conditions, curing, time of setting, consolidation,
-and curing sequence and length affect the cracking pattern and severity.
+Cracking of concrete can cause serious and costly damage to concrete structures. The cracking fault tree is shown in \cref{fig:fault-tree-cracking}. The factors affecting cracking can be due to design, materials, and/or construction. In the case of design, the factors of interest include the restraint, span type, deck thickness, girder type, or the steel alignment and location. When concrete is restrained, deformations result in stresses. Flexible structures and low rigidity lead to additional cracks. For example, decks on steel beams exhibit additional cracking compared to decks on rigid concrete beams. High modulus and low creep that can be beneficial in reducing prestress losses and deflections in beams, can lead to additional cracking in decks. High modulus leads to brittle structures and low creep does not enable relaxation that reduces stresses. It can be expected that low water-cementitious material ratios, high paste contents, and high heat of hydration can cause additional cracking. Concretes with low w/cm are brittle and more sensitive to curing. Concretes with high water, cement, and paste content exhibit additional shrinkage and additional temperature rise During construction and afterwards, the weather conditions, curing, time of setting, consolidation, and curing sequence and length affect the cracking pattern and severity.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Cracking fault tree.}\label{fig:fault-tree-cracking} 
+  \caption{Cracking fault tree.}
+  \label{fig:fault-tree-cracking} 
 \end{figure}
 
 
 \subsection{Service Life of Reinforcement}
 Reduced service life of reinforcement can be attributed to three causes: load-induced, man-made or natural
 hazards; causes resulting from production defects in construction processes and/or design details; or operational
-procedures. These deficiencies are illustrated in the main fault tree shown in Figure 3.20.
+procedures. These deficiencies are illustrated in the main fault tree shown in \cref{fig:fault-tree-reduced-main}.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Reduced service life main fault tree.}\label{fig:fault-tree-reduced-main} 
+  \caption{Reduced service life main fault tree.}
+  \label{fig:fault-tree-reduced-main} 
 \end{figure}
 
 \subsubsection{Load-induced}
 Load-induced bridge deck deterioration can be attributed to fatigue, strength and brittleness, or thermal
-incompatibility. These load-induced factors are introduced in the fault tree provided in Figure 3.21.
+incompatibility. These load-induced factors are introduced in the fault tree provided in \cref{fig:fault-tree-load-induced}.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Load-induced deficiency fault tree.}\label{fig:fault-tree-load-induced} 
+  \caption{Load-induced deficiency fault tree.}
+  \label{fig:fault-tree-load-induced} 
 \end{figure}
 
 Fatigue is caused by the repetition of applied loads that result in a degradation of the strength resistance of the
@@ -1488,16 +1490,10 @@ Coastal climate introduces salt spray and high humidity, and salt and moisture a
 spray in coastal climates provides high chloride buildup that can destroy the protective iron oxide coating over the
 steel reinforcement.
 
-Humidity affects corrosion activity. In the absence of chloride ions, little corrosion activity takes place when the
-relative humidity is under 60\% (Jung et al. 2003). The corrosion activity increases as the RH is increased up to a
-fully saturated state (>95\% relative humidity) and then begins to decrease again. When concrete is fully saturated,
-the corrosion rate is reduced because the oxygen level in the concrete pores is too low (Qian et al. 2002). When
-chlorides are present at relative humidity below 60\%, corrosion activity may still develop.
+Humidity affects corrosion activity. In the absence of chloride ions, little corrosion activity takes place when the relative humidity is under 60\% (Jung et al. 2003). The corrosion activity increases as the RH is increased up to a fully saturated state (>95\% relative humidity) and then begins to decrease again. When concrete is fully saturated, the corrosion rate is reduced because the oxygen level in the concrete pores is too low (Qian et al. 2002). When chlorides are present at relative humidity below 60\%, corrosion activity may still develop.
 
 \paragraph{Chemical Climate}
-Chemical climate influences the performance of reinforcement. The main effect can be attributed to corrosioninducing
-chemicals. These influences both occur naturally and can be man-made. Chlorides are the main chemical
-substance that adversely affects the corrosion process.
+Chemical climate influences the performance of reinforcement. The main effect can be attributed to corrosioninducing chemicals. These influences both occur naturally and can be man-made. Chlorides are the main chemical substance that adversely affects the corrosion process.
 
 \paragraph{Fire}
 Fire generates heat that affects mechanical properties. Cold-worked steel subjected to temperatures of less than 850°F typically recovers all of its yield strength after cooling (Suprenant 1996). Hot-rolled steel can be exposed to temperatures as high as 1,100°F and recover its yield strength. Higher temperatures may cause rapid strength loss in reinforcing steel and lead to excessive deflections in reinforced members. The effect of fire is more critical on prestressing steel; at temperatures of 750°F, the strength of prestressing steel can be reduced by more than 50\% (Suprenant 1996). 
@@ -1543,7 +1539,8 @@ Visual inspection can indicate the condition of the reinforcement and determine 
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
-  \caption{Design and detailing defects fault tree.}\label{fig:fault-tree-design-detailing}
+  \caption{Design and detailing defects fault tree.}
+  \label{fig:fault-tree-design-detailing}
 \end{figure}
 
 % \subsection{Service Life of Structural Steel}
