--- a/contents/chp10.tex
+++ b/contents/chp10.tex
@@ -396,6 +396,13 @@ conservative, however, if the deformation is due to high-cycle loading caused by
 was found that high cycle fatigue was more damaging, and in those cases the maximum shear strain should be limited
 to 0.10. (Roeder et al. 1990)
 
+\begin{figure}
+  % \includegraphics[width=\linewidth]{graphic-file}
+  % \caption{Shear deformation in elastomeric pad. (Stanton et al. 2008)}
+  \caption{Shear deformation in elastomeric pad. (Stanton et al. 2008)}
+  \label{fig:shear-deformation-elastomeric-pad}
+\end{figure}
+
 
 \subparagraph{Plate Delamination and Debonding:}
 Shear delamination between layers of elastomer and steel reinforcing plates is the most significant potential
@@ -465,7 +472,7 @@ The fabric layers of CDP are many and closely spaced, and result in significantl
 shear deformation capacity than in other elastomeric bearing types. As a consequence, CDP tolerate large
 compressive stresses, but limited shear deformation because interlayer splitting occurs at much smaller shear strains.
 Also, the large shear stiffness of CDP can result in slip of the girder on the CDP, which may result in abrasion and
-deterioration of the CDP. As a consequence, translational shear strain is limited to only about 10%. That is, the shear
+deterioration of the CDP. As a consequence, translational shear strain is limited to only about 10\%. That is, the shear
 deflection is limited to only 1/10 of the total CDP thickness. Larger movement requirements with CDP must be
 accommodated by the addition of a sliding surface such as \acrshort{ptfe} sliding surface (Lehman et al. 2003).
 
