--- a/setup/setup.tex
+++ b/setup/setup.tex
@@ -98,6 +98,11 @@
   type = symbols,
   description={}
 }
+\newglossaryentry{adjacentbox}{%
+  name = 多片梁式结构,
+  type = symbols,
+  description={}
+}
 % \newglossaryentry{}{%
 %   name = ,
 %   type = symbols,
